--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -8,8 +8,8 @@
 			"type": "lldb",
 			"request": "launch",
 			"name": "Debug",
-			"program": "${workspaceFolder}/test",
-			"args": [],
+			"program": "${workspaceFolder}/pipex",
+			"args": ["intest" "echo bonjour" "echo salut" "outtest"],
 			"cwd": "${workspaceFolder}"
 		}
 	]
