--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -9,7 +9,7 @@
 			"request": "launch",
 			"name": "Debug",
 			"program": "${workspaceFolder}/pipex",
-			"args": ["infile", "echo 1", "echo 2", "outfile"],
+			"args": ["infile", "cat", "cat", "outfile"],
 			"cwd": "${workspaceFolder}"
 		}
 	]
