--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -1,16 +1,20 @@
 {
-	// Use IntelliSense to learn about possible attributes.
-	// Hover to view descriptions of existing attributes.
-	// For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
 	"version": "0.2.0",
 	"configurations": [
 		{
 			"type": "lldb",
 			"request": "launch",
-			"name": "Debug",
+			"name": "Debug_lldb",
 			"program": "${workspaceFolder}/pipex",
 			"args": ["here_doc", "FIN", "cat", "cat", "outfile"],
 			"cwd": "${workspaceFolder}"
+		},
+		{
+			"type": "gdb",
+			"request": "launch",
+			"name": "Debug_gdb",
+			"program": "${workspaceFolder}/pipex",
+			"args": ["here_doc", "FIN", "cat", "cat", "outfile"],
 		}
 	]
 }
